# pyadditive-widgets

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALLATION.rst  README.md  README.rst  index.html  microstructure-study.ps  porosity-study.ps  pyproject.toml  robots.txt  single-bead-study.ps  tox.ini  versions.json
.github/workflows/: ci_cd.yml  label.yml
doc/: .vale.ini  make.bat
doc/changelog.d/: 37.added.md  39.changed.md  40.changed.md  46.changed.md  50.fixed.md  52.fixed.md  54.dependencies.md  55.dependencies.md  56.dependencies.md  57.dependencies.md  58.dependencies.md  61.dependencies.md  62.dependencies.md  64.dependencies.md  65.dependencies.md  66.dependencies.md  70.dependencies.md  73.dependencies.md  74.changed.md  76.dependencies.md  77.dependencies.md  79.dependencies.md  80.dependencies.md  81.dependencies.md  83.maintenance.md  84.dependencies.md  85.dependencies.md  86.dependencies.md  89.dependencies.md  90.dependencies.md  91.maintenance.md  92.dependencies.md  93.dependencies.md  94.dependencies.md  95.dependencies.md  96.dependencies.md  97.dependencies.md
doc/source/: changelog.rst  conf.py  contributing.rst  index.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst
doc/styles/Vocab/ANSYS/: accept.txt
examples/: 00_parametric_study.py  00_single_bead_study.py  01_porosity_study.py  02_microstructure_study.py  03_parametric_study.py  README.rst  demo-study.ps  parametric_study_gui.py  single-bead-study.ps
src/ansys/additive/parametric_study_gui/: __init__.py  parametric_study_gui.py
src/ansys/additive/widgets/: __init__.py
src/ansys/additive_parametric_study_gui/panel/: __init__.py
tests/: test_metadata.py
version/: index.html
version/0.1/: .buildinfo  404.html  announcement.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.1/_downloads/120a6f2b5058c7e3227f2bb80d146ba3/: 01_porosity_study.py
version/0.1/_downloads/466319017af75c95989740d38d5984be/: 01_porosity_study.ipynb
version/0.1/_downloads/82140031eb8aa9d9ca49490069cb4d99/: 00_single_bead_study.ipynb
version/0.1/_downloads/a973754a132952c4ea82f1d024626872/: 02_microstructure_study.ipynb
version/0.1/_downloads/c0ad06c04fd270cac71f9ca0026c68d0/: 02_microstructure_study.py
version/0.1/_sources/: index.rst.txt  sg_execution_times.rst.txt
version/0.1/_sources/api/: index.rst.txt
version/0.1/api/: index.html
version/0.1/examples/gallery_examples/: 00_single_bead_study.html  01_porosity_study.html  02_microstructure_study.html  index.html  sg_execution_times.html
version/0.1/getting_started/: index.html
version/0.2/: 404.html  changelog.html  contributing.html  index.html  objects.inv
version/0.2/_downloads/7780566f650efe4a7ebced80fd894f04/: 03_parametric_study.py
version/0.2/_downloads/82140031eb8aa9d9ca49490069cb4d99/: 00_single_bead_study.ipynb
version/0.2/_downloads/8944c9b591724ccbb2386bda14342edf/: 00_single_bead_study.py
version/0.2/_downloads/8ffc63ae89f2f7f2050b6df0898d6a54/: 03_parametric_study.ipynb
version/0.2/_downloads/a973754a132952c4ea82f1d024626872/: 02_microstructure_study.ipynb
version/0.2/_sources/: contributing.rst.txt
version/0.2/_sources/api/: index.rst.txt
version/0.2/api/: index.html
version/0.2/getting_started/: index.html
version/0.2/user_guide/: index.html
version/dev/: .buildinfo  404.html  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/dev/_sources/: changelog.rst.txt  sg_execution_times.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/stable/_sources/: changelog.rst.txt  sg_execution_times.rst.txt
(+82 files in other folders)
