[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-additive-widgets"
version = "0.1.dev2"
description = "Visualization toolkit for parametric additive simulations "
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >=4.0",
    "ansys-additive-core >=0.17",
    "panel==1.3.8"
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "panel==1.3.8"
]
doc = [
    "ansys-sphinx-theme==0.14.1",
    "enum-tools==0.11.0",
    "jupyter_sphinx==0.5.3",
    "matplotlib==3.8.3",
    "numpydoc==1.6.0",
    "phantomjs==1.4.1",
    "pypandoc==1.13",
    "pyvista==0.43.4",
    "selenium==4.18.1",
    "sphinx==7.2.6",
    "sphinx-autoapi==3.0.0",
    #"sphinx-autoapi @ git+https://github.com/ansys/sphinx-autoapi@feat/single-page-stable",
    "sphinx-autodoc-typehints==2.0.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.5.0",
    "sphinx-gallery==0.15.0",
    "sphinx-jinja==2.0.2",
    "sphinx-notfound-page==1.0.0",
    "sphinx-toolbox==3.5.0",
    "sphinxemoji==0.3.1",
]

[tool.flit.module]
name = "ansys.additive.widgets"

[project.urls]
Source = "https://github.com/ansys/pyadditive-widgets"
Tracker = "https://github.com/ansys/pyadditive-widgets/issues"
Homepage = "https://github.com/ansys/pyadditive-widgets"
Documentation = "https://widgets.additive.docs.pyansys.com"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.additive"]

[tool.coverage.report]
show_missing = true
